force-app/main/default/objects/Credit_Check_Log__c/Credit_Check_Log__c.object-meta.xml
<CustomObject>
    <description>Immutable record of who accessed a Credit Check record (pull or view), and when. Decoupled from Credit_Check__c and Loan_Application__c via Lookup (not master-detail) so the audit trail survives even if the record it audits is later deleted at retention expiry.</description>
    <label>Credit Check Log</label>
    <nameField>
        <displayFormat>CCL-{0000}</displayFormat>
        <label>Credit Check Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Check Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>