force-app/main/default/objects/Credit_Check_Log__c/fields/Access_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Access_Timestamp__c</fullName>
    <label>Access Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>