force-app/main/default/objects/Credit_Check_Log__c/fields/Accessed_By_Username__c.field-meta.xml
<CustomField>
    <fullName>Accessed_By_Username__c</fullName>
    <description>Username at the moment of access. The Accessed_By__c lookup is the queryable relationship; this is the durable copy, so the row still identifies the accessor if that lookup is ever nulled.</description>
    <label>Accessed By Username</label>
    <length>80</length>
    <type>Text</type>
</CustomField>