force-app/main/default/objects/Credit_Check_Log__c/fields/Credit_Score__c.field-meta.xml
<CustomField>
    <complianceGroup>PII</complianceGroup>
    <fullName>Credit_Score__c</fullName>
    <description>Score that was disclosed by this access, denormalised for the same self-containment reason as Credit_Check_Reference__c. Not required — a failed bureau call is still an access worth auditing, and it has no score.</description>
    <label>Credit Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>