force-app/main/default/objects/Credit_Check_Log__c/fields/Loan_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application_Number__c</fullName>
    <description>LA-000X as it was at the moment of access. Denormalised so the audit row still names the application after the Loan_Application__c lookup is nulled by retention deletion.</description>
    <label>Loan Application Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>