force-app/main/default/objects/Credit_Check_Log__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <description>Why the CRI data was accessed, e.g. Credit assessment. Deliberately separate from Access_Type__c: that field is a restricted picklist recording the mechanism (Pull or View), which is a different question from the permitted purpose Part IIIA requires be recorded.</description>
    <inlineHelpText>Permitted purpose for the access</inlineHelpText>
    <label>Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>